# spacerework_monorepo

./: .dockerignore  .env  .gitignore  .map  Cargo.toml  Dockerfile  README.md  commands.sh  commitlint.config.js  docker-compose.yml  oldDockerfile  oldDockerfile_multistage_try  package-lock.json  package.json  tailwind.config.js  tuono.config.ts
.cargo/: config.toml
.git-hooks/: commit-msg  pre-commit
.husky/: pre-commit
commands/: app-container-build.sh  app-container-logs-cat.sh  app-container-logs-tail.sh  app-container-shell.sh  app-container-stop.sh  db-container-build.sh  db-container-start.sh  db-container-stop.sh  dev.sh  docker-build-all-and-migrate.sh  docker-build.sh  docker-clean-with-cache.sh  docker-clean.sh  docker-container-logs-cat.sh  docker-container-logs-tail.sh  docker-ls.sh  docker-shell.sh  fc-app-tests-integration.sh  fc-app-tests-unit-cov.sh  fc-app-tests-unit.sh  fc-app-tests.sh  release-build-and-send-to-remote-server.sh
commands/app/: clean.sh  tuono_update.sh
crates/macros/: Cargo.toml
crates/md_to_html/: Cargo.toml
crates/space_macros/: Cargo.toml
crates/space_md_to_html/: Cargo.toml
docker/: .dockerignore  Dockerfile  compose.yml  entrypoint.sh
docker/app/: Dockerfile  compose.yml  post_build.sh
docker/db/: .gitignore  compose.yml  pgadmin-init-config.sh
documentation/: README.md
documentation/backend/: api-routes.md  architecture.md  database-schema.md  performance.md
documentation/ci-cd/: deployment-aws.md  jenkins-pipeline.md  rollback-strategy.md
md_to_html/: Cargo.toml
src/: lib.rs  models.rs  schema.rs
src/domain/: mod.rs  (+1 more)
tests/: integration.rs  mod.rs
(+139 files in other folders)
