[package]
name = "tuono-app"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "tuono"
path = ".tuono/main.rs"

[dependencies]
tuono_lib = "0.17.6"
serde = { version = "1.0.202", features = ["derive"] }
diesel = { version = "2.2.6", features = ["postgres"] }
dotenvy = "0.15.7"
md_to_html = { path = "./crates/md_to_html" }
serde_json = "1.0.138"
