[package]
name = "app"
version = "0.0.1"
edition = "2021"

[workspace]
members = ["src/migration"]

[[bin]]
name = "tuono"
path = ".tuono/main.rs"

[dependencies]
tuono_lib = "0.17.8"
serde = { version = "1.0.202", features = ["derive"] }
dotenvy = "0.15.7"
md_to_html = { path = "./crates/md_to_html" }
sea-orm = { version = "1.1.4", features = ["sqlx-postgres", "runtime-async-std-native-tls", "macros", "mock"] }

regex = "1.11.1"

[features]
integration = []
e2e = []
