[package]
name = "app"
version = "0.0.1"
edition = "2021"

[workspace]
members = [ "src/migration"]

[[bin]]
name = "tuono"
path = ".tuono/main.rs"

[dependencies]
tuono_lib = "0.17.10"
serde = { version = "1.0.202", features = ["derive"] }
dotenvy = "0.15.7"
space_md_to_html = { path = "./crates/space_md_to_html" }
sea-orm = { version = "1.1.4", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "mock"] }
regex = "1.11.1"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "macros"] }
migration = { path = "src/migration" }
uuid = { version = "1.15.1", features = ["v4"] }

[dev-dependencies]
space_macros = { path = "./crates/space_macros" }